kubernetes/apps/home-automation/zigbee2mqtt/basement/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: z2m-b
  namespace: home-automation
spec:
  hostnames:
    - z2m-b.k8s.mstrsmth.io
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /code/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: z2m-b
          port: 12321
    - backendRefs:
        - name: z2m-b
          port: 8080
